--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <img class="left_container" id="first_img" src="./img/IMGP0420.png" alt="photo from behind of person sitting in the room"> 
     <div class="right_container">
         <p>ABOUT ME</p>
-        <p>Name: Anastasia </p>
-        <p>Hello! Here I presented my short story in Game Development jorney, which I hope to continue complementing with better projects and ideas in the near future.</p>
+        <p>Hello! </p>
+        <p>Here I presented my short story in Game Development jorney, which I hope to continue complementing with better projects and ideas in the near future.</p>
 
         <div class="links_block">
           <a href="https://github.com/StrandGear"><img src="./img/GitHub-logo.png" alt="github logo" onmouseover="gitHover(this)" onmouseout="gitUnhover(this)"></a>
