--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides2 fade ">
       <div class="main_container">
-        <img class="left_container" src="./img/space_cat2.png">
+        <video class="left_container" src="./video/space_nyan.mp4" controls = "controls autoplay"></video>
         <div class="right_container">
           <p>
-            <span class="text_article">Genre:</span>Platformer
+            <span class="text_article">Genre:</span> Platformer
             <br>
             <span class="text_article"><br>Thematic Setting:</span> Endless runner with increasing difficulty; UFO tries to destroy platforms, player dies from touching UFO or falling
             <br>
@@ -127,11 +127,7 @@
           </p>
       </div>
     </div>
-    </div>
-    <div class="mySlides2 fade">
-      <video class="main_container" style="width: auto;" src="./video/space_nyan.mp4" controls = "controls autoplay"></video>
-      
-    </div>
+    </div>  
     <div class="mySlides2 fade">
       <div class="main_container">
         <div class="left_container" style="margin-left: 15px; margin-right: 10px">
@@ -175,7 +171,6 @@
     <div style="text-align:center">
       <span class="mySlides2_dot dot" onclick="currentSlide(1, 'mySlides2')"></span>
       <span class="mySlides2_dot dot" onclick="currentSlide(2, 'mySlides2')"></span>
-      <span class="mySlides2_dot dot" onclick="currentSlide(3, 'mySlides2')"></span>
     </div>
   </div>
 
@@ -206,7 +201,7 @@
         <img class="left_container" src="./img/gesundi/gesundi_mb.jpg">
         <div class="right_container">
           <p>
-            <span class="text_article">Genre:</span>Idle game
+            <span class="text_article">Genre:</span> Idle game
             <span class="text_article"><br>Thematic Setting:</span> Player needs to keep clean his house and his mind while annoying cousins are making mess. From time to time hero sings random songs and pushing cousins to get them out of the way.
             <span class="text_article"><br>Tech Stack:</span> C#, Unity
             <span class="text_article"><br>Extra:</span> First team project, made for Brackeys game jam on the theme "Let there be Chaos".
@@ -333,7 +328,7 @@
         <img class="left_container" src="./img/kin/kinCover.jpg" style="width: 540px; height: 490px; margin-left: 100px;">
         <div class="right_container">
           <p>
-            <span class="text_article">Genre:</span>Platformer
+            <span class="text_article">Genre:</span> Platformer
             <br>
             <span class="text_article"><br>Thematic Setting:</span> Player needs to run through the the enemies and obstacles, pick up potions and use magic or weapon to fight
             <br>
@@ -398,7 +393,7 @@
       <div class="main_container">
         <video class="left_container " src="./video/kin/EnemyBehaviour.mp4" style="width: 630px; margin-left: 50px;" loop autoplay controls muted></video>
         <div class="right_container ">
-          <h2 style="margin-top: 0;">Enemy Behaviour</h2>
+          <h2 style="margin-top: 0;"> Enemy Behaviour</h2>
           <p class="code">
             ...
             <br>if (longRange){
